--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "chart.js": "^4.4.6",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
+        "react-helmet": "^6.1.0",
         "react-router-dom": "^6.27.0"
     }
 }
