--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.2",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0.5",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
@@ -22,9 +22,11 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "chart.js": "^4.4.6",
         "react": "^18.3.1",
+        "react-activity": "^2.1.3",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-helmet": "^6.1.0",
-        "react-router-dom": "^6.27.0"
+        "react-router-dom": "^6.28.0",
+        "sweetalert2": "^11.14.5"
     }
 }
