--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
         "react": "^18.3.1",
         "react-activity": "^2.1.3",
         "react-chartjs-2": "^5.2.0",
+        "react-color": "^2.19.3",
+        "react-colorful": "^5.6.1",
+        "react-datepicker": "^7.5.0",
         "react-dom": "^18.3.1",
         "react-helmet": "^6.1.0",
+        "react-modal": "^3.16.1",
         "react-router-dom": "^6.28.0",
         "sweetalert2": "^11.14.5"
     }
