--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-activity": "^2.1.3",
         "react-chartjs-2": "^5.2.0",
         "react-color": "^2.19.3",
+        "react-color-palette": "^7.3.0",
         "react-colorful": "^5.6.1",
         "react-datepicker": "^7.5.0",
         "react-dom": "^18.3.1",
