fĩ: add logic checkbox

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-helmet": "^6.1.0",
         "react-modal": "^3.16.1",
         "react-router-dom": "^6.28.0",
-        "sweetalert2": "^11.14.5"
+        "sweetalert2": "^11.14.5",
+        "swiper": "^11.1.15"
     }
 }
