--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@supabase/supabase-js": "^2.47.1",
         "@tailwindcss/line-clamp": "^0.4.4",
         "chart.js": "^4.4.6",
+        "dayjs": "^1.11.13",
         "react": "^18.3.1",
         "react-activity": "^2.1.3",
         "react-chartjs-2": "^5.2.0",
