--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "vite": "^5.4.11"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-brands-svg-icons": "^6.6.0",
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@mui/material": "^6.2.0",
         "@supabase/supabase-js": "^2.47.3",
         "@tailwindcss/line-clamp": "^0.4.4",
         "chart.js": "^4.4.6",
