--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-datepicker": "^7.5.0",
         "react-dom": "^18.3.1",
         "react-helmet": "^6.1.0",
+        "react-markdown": "^9.0.1",
         "react-modal": "^3.16.1",
         "react-router-dom": "^6.28.0",
         "sweetalert2": "^11.14.5",
